--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       <div class="red threevert"></div>
       <div class="white threevert"></div>
       <!-- Finish rest of flag here here -->
+      <div class="blue threevert"></div>
     </div>
   
     <h2>Thailand</h2>
