--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
     <h2>Thailand</h2>
     <div class="flag">
       <!-- insert flag here -->
+      <div class="darkred sixvert"></div>
+      <div class="white sixvert"></div>
+      <div class="blue sixvert"></div>
+      <div class="blue sixvert"></div>
+      <div class="white sixvert"></div>
+      <div class="darkred sixvert"></div>
     </div>
   
     <h2>Romania</h2>
