--- a/index.html
+++ b/index.html
@@ -35,17 +35,20 @@
     <h2>Thailand</h2>
     <div class="flag">
       <!-- insert flag here -->
-      <div class="darkred sixvert"></div>
-      <div class="white sixvert"></div>
-      <div class="blue sixvert"></div>
-      <div class="blue sixvert"></div>
-      <div class="white sixvert"></div>
-      <div class="darkred sixvert"></div>
+        <div class="darkred sixvert"></div>
+        <div class="white sixvert"></div>
+        <div class="blue sixvert"></div>
+        <div class="blue sixvert"></div>
+        <div class="white sixvert"></div>
+        <div class="darkred sixvert"></div>
     </div>
   
     <h2>Romania</h2>
     <div class="flag horiz">
       <!-- insert flag here -->
+        <div class="blue threehoriz"></div>
+        <div class="yellow threehoriz"></div>
+        <div class="red threehoriz"></div>
     </div>
   
     <h2>Mexico</h2>
