--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
     <h2>Mexico</h2>
     <div class="flag horiz">
       <!-- insert flag here -->
+      <div class="darkgreen threehoriz"></div>
+      <div class="grey threehoriz center-items">
+        <img src="./Mexican Flag Eage.png" alt="Mexican Flag Eagle" id="flag-eagle">
+      </div>
+      <div class="red threehoriz"></div>
     </div>
   
     <h2>Greece</h2>
