--- a/index.html
+++ b/index.html
@@ -64,6 +64,21 @@
     <h2>Greece</h2>
     <div class="flag">
       <!-- insert flag here -->
+        <div class="stripes">
+            <div class="greekblue ninevert"></div>
+            <div class="white ninevert"></div>
+            <div class="greekblue ninevert"></div>
+            <div class="white ninevert"></div>
+            <div class="greekblue ninevert"></div>
+            <div class="white ninevert"></div>
+            <div class="greekblue ninevert"></div>
+            <div class="white ninevert"></div>
+            <div class="greekblue ninevert"></div>
+        </div>
+        <div class="greek-plus greekblue">
+            <div class="white plus-stripe-vert"></div>
+            <div class="white plus-stripe-horiz"></div>
+        </div>
     </div>
   
     <h3>Challenge (These are optional)</h3>
